created register template, auth controller, added links in nav header.

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,3 +5,9 @@
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
+
+<nav>
+	<a href="/">Home Page</a>
+	||
+	<a href="/auth/register">Register</a>
+</nav>
