--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,6 +2,8 @@
 
 <h3> Welcome to the States Travel Journal</h3>
 
+<p> <%= message %> </p>
+
 <h4>About</h4>
 <p>Register an account with us and start tracking your travels.</p>
 <p>Members can leave comments on their favorite destinations and learn about other useres expiriences</p>
