created logout route, page and added link in the header

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,4 +12,10 @@
 	<a href="/auth/register">Register</a>
 	||
 	<a href="/auth/login">Log In</a>
+	||
+	<a href="/auth/logout">Log Out</a>
+</nav>
+
+<nav>
+<!-- if the user is logged in there should be a link here in the header that allows them to go to their profile the link is "/user/:id" -->
 </nav>
