--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,11 +9,15 @@
 <nav>
 	<a href="/">Home Page</a>
 	||
+	<a href="/states">See all states</a> 
+	||
 	<a href="/auth/register">Register</a>
 	||
 	<a href="/auth/login">Log In</a>
 	||
 	<a href="/auth/logout">Log Out</a>
+	<!-- ^only show logout if the user is logged in and dont show login + register when user is logged in -->
+
 </nav>
 
 <nav>
