--- a/views/states/nav.ejs
+++ b/views/states/nav.ejs
@@ -1,7 +1,6 @@
-  <nav>
+<!--   <nav>
     <small>
-      <a href="/states">See all states</a> | 
-      <a href="/states/new">Add a state</a> 
+      
      
     </small>    
-  </nav>
+  </nav> -->
