--- a/views/states/index.ejs
+++ b/views/states/index.ejs
@@ -7,7 +7,7 @@
 	<ul>
 		<% states.forEach((state) => { %>
 			<li>
-				<a href="/states/<%= state.id %>"><%= state.name %></a>
+				<a href="/states/<%= state.id %>"><%= state.state %></a>
 
 				<!-- Need to add loop to populate state data from future stateData.js file -->
 			</li>
