state data appears on show page

--- a/views/states/show.ejs
+++ b/views/states/show.ejs
@@ -4,14 +4,13 @@
 
 	<h3>States Show</h3>
 
-	
 
+	<h3> <%= state.state %> <h3>
 
-
-
-
-
-
+		<p> <%= state.stateBird %>
+		<p> <%= state.population %>
+		<p> <%= state.topAttractions %>
+		<img src="<%= state.birdImage %>"/>
 
 
 
