--- a/views/states/nav.ejs
+++ b/views/states/nav.ejs
@@ -1,6 +1,8 @@
-<!--   <nav>
+  <nav>
     <small>
       
+      <a href="/users/<%= userId %>/states">My states</a>
+
      
     </small>    
-  </nav> -->
+  </nav>
