blocked nav from appearing when user is not logged in

--- a/views/states/index.ejs
+++ b/views/states/index.ejs
@@ -1,6 +1,11 @@
 <%- include('../partials/header.ejs') %>
 
-	<%- include('./nav.ejs') %>
+
+<% if (username) { %>
+<%- include('./nav.ejs') %>
+
+<% } %>
+
 
 	<h3>States Index</h3>
 
