--- a/views/states/nav.ejs
+++ b/views/states/nav.ejs
@@ -3,6 +3,9 @@
       
       <a href="/users/<%= userId %>/states">My states</a>
 
+
+
+      <p><%= message %></p>
      
     </small>    
   </nav>
