user stateList page rendered

--- a/views/states/show.ejs
+++ b/views/states/show.ejs
@@ -15,7 +15,7 @@
 		<% if(username) {%>
 			<fielset>
 				<label for="visited">I have been here</label>
-				<input id="visited" type="checkbox" name="visited">
+				<input id="visited" type="checkbox" name="visited"/>
 			</fieldset>
 		<%}%>
 
