--- a/views/users/stateList.ejs
+++ b/views/users/stateList.ejs
@@ -1,14 +1,14 @@
-<%- include('./partials/header.ejs') %>
+<%- include('../partials/header.ejs') %>
 
 <h3> <%= user.username%>'s States Visited</h3>
 
 	<ul>
-		<% states.forEach((state) => {
+		<% states.forEach((state) => { %>
 			<li>
-		 		<a href="/states/<%= state.id %>"> <%= state.state %>
+		 		<a href="/states/<%= state.id %>"><%= state.state %></a>
 			</li>
 		<%})%>
 	</ul>
 
 
-<%- include('./partials/footer.ejs') %>
+<%- include('../partials/footer.ejs') %>
