user unable to see/use comments box unless has been to the state

--- a/views/states/show.ejs
+++ b/views/states/show.ejs
@@ -20,7 +20,7 @@
 		<%}%>
 
 
-		<% if(username) {%>
+		<% if(state.visited == true) {%>
 			<form method="POST" action="/comments/<%= state.id %>">
 				<textarea name='text' placeholder="share your experience"></textarea>
 				<br />
