5pm commit: need to debug POST /users from <My States> link and <I have been here> button

--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -21,11 +21,11 @@
 		/>
 	</div>
 	<div>
-		<label class='label' for='username'>Username:</label>
+		<label class='label' for='user'>Username:</label>
 		<input class='input'
-		id='username'
+		id='user'
 		type='text'
-		name='username'
+		name='user'
 		placeholder='Choose a username'
 		/>
 	</div>
