--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -7,11 +7,11 @@
  <form class='inputForm' method='POST' action='/auth/login'>
  	<fieldset class='fieldset'>	
 	 	<div>
-			<label class='label' for='username'>Username:</label>
+			<label class='label' for='user'>Username:</label>
 			<input class='input'
-			id='username'
+			id='user'
 			type='text'
-			name='username'
+			name='user'
 			placeholder='Choose a username'
 			/>
 		</div>
