--- a/views/states/nav.ejs
+++ b/views/states/nav.ejs
@@ -1,7 +1,7 @@
   <nav>
     <small>
       
-      <a href="/users/<%= userId %>/states">My states</a>
+      <a href="/users/<%= userId %>/states">My Profile</a>
 
 
 
