push to master to switch drivers

--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -5,7 +5,7 @@
 	<ul>
 		<% states.forEach((state) => { %>
 			<li>
-		 		<a href="/states/<%= state.id %>"><%= state.states %></a>
+		 		<a href="/states/<%= state.id %>"><%= state.state%></a>
 			</li>
 		<%})%>
 	</ul>
