sized the birds

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,6 +21,12 @@ body{
  	margin: 5px;
  	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px rgba(0,0,0,0.19);
  }
+  .birds{
+  	width:;
+  	height:;
+  	border:;
+  	margin:;
+  }
 
 
  	
