--- a/views/states/show.ejs
+++ b/views/states/show.ejs
@@ -10,10 +10,10 @@
 		<p> <%= state.stateBird %>
 		<p> <%= state.population %>
 		<p> <%= state.topAttractions %>
-		<img src="<%= state.birdImage %>"/>
+		<img class='birds' src="<%= state.birdImage %>"/>
 		
 		<% if(user) {%>
-			<form method="POST" action="/users/<%= userId %>/states<%= user.id %>?_method=PUT">
+			<form method="POST" action="/users/<%= userId %>?_method=PUT">
 				<label for="states">I have been here</label>
 				<button>I have been here</button>
 			</form>
