--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -1,14 +1,7 @@
 <%- include('../partials/header.ejs') %>
 
-<h3> <%= user.user %>'s States Visited</h3>
+<h3> <%= user %>'s States Visited</h3>
 
-	<ul>
-		<% user.states.forEach((state) => { %>
-			<li>
-		 		<a href="/states/<%= state.id %>"><%= state.state%></a>
-			</li>
-		<%})%>
-	</ul>
 
 
 <%- include('../partials/footer.ejs') %>
