--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header.ejs') %>
 
-<h3> <%= user %>'s States Visited</h3>
+<h3> <%= user.states %>'s States Visited</h3>
 
 
 
