state objects are being pushed to user aray property states

--- a/views/states/show.ejs
+++ b/views/states/show.ejs
@@ -14,7 +14,7 @@
 		
 		<% if(user) {%>
 
-			<form method="POST" action="/users/<%= userId %>?_method=PUT" value= "value">
+			<form method="POST" action="/users/<%= userId %>/<%= state.id %>?_method=PUT" value= "value">
 
 				<label for="states">I have been here</label>
 				<button>I have been here</button>
