--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -1,6 +1,24 @@
 <%- include('../partials/header.ejs') %>
 
-<h3> <%= user.states %>'s States Visited</h3>
+<h3> <%= user %>'s States Visited</h3>
+
+<% states.forEach((state) => { %>
+	<p>
+		<a href="/states/<%= state.id %>"><%= state.state %></a>
+	</p>
+    
+<% }) %>
+
+
+
+
+
+
+
+<!-- <p>stateVisited.state</p>
+<p>stateVisited.capital</p>
+<p>stateVisited.population</p>
+<p>stateVisited.</p> -->
 
 
 
