added comment deletetion authorizations

--- a/views/states/show.ejs
+++ b/views/states/show.ejs
@@ -38,9 +38,13 @@
         	<br />
         	 <small>(<%= comment.posted.toLocaleString() %>) by (<%= comment.user.user %>) </small>
 				 <small>
+
+				 	<% if(userId == comment.user.id) { %>
 		        	<form method="POST" action="/comments/<%= state.id %>/<%= comment.id %>?_method=DELETE">
 		            	<button>Delete This Comment</button>
 		        	</form>
+		        	<%}%>
+
 		    	</small>
       		</li>
     	<% }) %>
