--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
 
 <h4>About</h4>
 <p>Register an account with us and start tracking your travels.</p>
-<p>Members can leave comments on their favorite destinations and learn about other useres expiriences</p>
+<p>Members can leave comments on their favorite destinations and learn about other users experiences</p>
 <p>ALL users have access to the states index. There you will find a list of fun state facts.</p>
 
 <h4>ENJOY</h4>
