pushing to Heroku

--- a/views/states/nav.ejs
+++ b/views/states/nav.ejs
@@ -1,9 +1,10 @@
   <nav>
     <small>
       
+
+      <% if(user) {%>
       <a href="/users/<%= userId %>">My Profile</a>
-
-
+      <%}%>
 
       <p><%= message %></p>
      
