--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -3,7 +3,7 @@
 <h3> <%= user %>'s States Visited</h3>
 
 <% states.forEach((state) => { %>
-	<p>
+	<p class='states'>
 		<a href="/states/<%= state.id %>"><%= state.state %></a>
 	</p>
     
