--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,22 +3,32 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
+	<link href="https://fonts.googleapis.com/css2?family=Bungee+Inline&display=swap" rel="stylesheet">
 </head>
 <body>
+	<header>
+		<nav class='navBar'>
+			
+			<ul class='navLinks'>
+				<li>
+					<a href="/">Home Page</a>
+				</li>
+				<li>
+					<a href="/states">See all states</a> 
+				</li>
+				<li>
+					<a href="/auth/register">Register</a>
+				</li>
+				<li>
+					<a href="/auth/login">Log In</a>
+				</li>
+				<li>
+					<a href="/auth/logout">Log Out</a>
+				</li>
+			</ul>
 
-<nav>
-	<a href="/">Home Page</a>
-	||
-	<a href="/states">See all states</a> 
-	||
-	<a href="/auth/register">Register</a>
-	||
-	<a href="/auth/login">Log In</a>
-	||
-	<a href="/auth/logout">Log Out</a>
-	<!-- ^only show logout if the user is logged in and dont show login + register when user is logged in -->
-
-</nav>
+		</nav>
+	</header>
 	
 <nav>
 
